--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="grayLight">#F9F9F9</color>
     <color name="blackDeep">#34322F</color>
-    <color name="pink">#e91e63</color>
+    <color name="pink">#EC6664</color>
     <color name="orange">#FF9717</color>
     <color name="gray_light">#F5F5F4</color>
 </resources>
