--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,12 @@
     <!-- Base application theme. -->
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowIsTranslucent">true</item>
         <item name="colorAccent">@color/pink</item>
         <item name="colorPrimary">@color/pink</item>
+        <item name="colorPrimaryDark">@color/pink</item>
     </style>
+
     <style name="AppTheme" parent="AppTheme.Base"></style>
 
     <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -13,4 +16,9 @@
         <item name="colorAccent">@color/pink</item>
         <item name="colorPrimary">@color/pink</item>
     </style>
+
+    <style name="LaunchTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:background">@drawable/page_launch</item>
+    </style>
+
 </resources>
