--- a/app/src/main/res/layout/person_fragment.xml
+++ b/app/src/main/res/layout/person_fragment.xml
@@ -12,6 +12,7 @@
         android:layout_height="4dp"
         android:background="@drawable/shadow_top"/>
     <RelativeLayout
+        android:id="@+id/user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
@@ -43,7 +44,7 @@
             android:layout_toLeftOf="@+id/head_arrows"
             android:singleLine="true"
             android:ellipsize="end"
-            tool:text="标题注解：新番源自日语词汇“新番组”，意思是新节目。许多情况下，新番可以说就是新番动画的代名词。"/>
+            tool:text="新番源自日语词汇“新番组”，意思是新节目。许多情况下，新番可以说就是新番动画的代名词。"/>
 
         <ImageView
             android:id="@+id/head_arrows"
@@ -56,62 +57,6 @@
             android:layout_alignTop="@+id/face"
             android:layout_alignBottom="@+id/face"
             />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/darker_gray"
-            android:layout_below="@+id/face"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/divider">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/attention"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/TextAppearance.AppCompat.Body1"
-                    tool:text="400"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="关注"
-                    style="@style/TextAppearance.AppCompat.Body2" />
-            </LinearLayout>
-            <View
-                android:layout_width="0.5dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="@android:color/darker_gray"/>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/fans"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/TextAppearance.AppCompat.Body1"
-                    tool:text="400"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="粉丝"
-                    style="@style/TextAppearance.AppCompat.Body2" />
-            </LinearLayout>
-        </LinearLayout>
 
     </RelativeLayout>
 
@@ -172,6 +117,28 @@
             android:layout_height="wrap_content"
             style="@style/Base.TextAppearance.AppCompat.Body1"
             android:text="我的动态"
+            android:layout_margin="16dp"/>
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_arrows_right"
+            android:layout_marginRight="16dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/view_attention"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="1dp"
+        android:background="@android:color/white">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            style="@style/Base.TextAppearance.AppCompat.Body1"
+            android:text="我关注的人"
             android:layout_margin="16dp"/>
         <ImageView
             android:layout_width="16dp"
