--- a/app/src/main/res/menu/menu_trends.xml
+++ b/app/src/main/res/menu/menu_trends.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/add"
         android:title="添加"
         android:icon="@drawable/ic_add"
         app:showAsAction="always"
